// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoYHE bZQzyo"
>
  <li
    className="sc-fzpkqZ dpMVUQ"
    onClick={[Function]}
  >
    <span
      className="sc-fzqAbL cyovHC"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzpkqZ dpMVUQ"
    onClick={[Function]}
  >
    <span
      className="sc-fzqAbL cyovHC"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzpkqZ dpMVUQ"
    onClick={[Function]}
  >
    <span
      className="sc-fzqAbL cyovHC"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzoYHE bZQzyo"
>
  <li
    className="sc-fzpkqZ hYQApQ"
    onClick={[Function]}
  >
    <span
      className="sc-fzqAbL cyovHC"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzpkqZ hYQApQ"
    onClick={[Function]}
  >
    <span
      className="sc-fzqAbL cyovHC"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzpkqZ hYQApQ"
    onClick={[Function]}
  >
    <span
      className="sc-fzqAbL cyovHC"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
